<resources>
    <string name="app_name">BunkBuddy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="attended_classes_placeholder">Attended:</string>
    <string name="all_subjects">All Subjects</string>
    <string name="timetable">Timetable</string>
    <string name="null_value">-</string>
    <string name="search_subjects">Search Subjects</string>
    <string name="subject_name">Subject Name</string>
    <string name="attended">Attended</string>
    <string name="missed">Missed</string>
    <string name="requirement">Requirement</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="search_for_subjects">Search for subjects</string>
    <string name="subject">Subject</string>
    <string name="day">Day</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="wednesday">Wednesday</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="account">Account</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="password">Password</string>
    <string name="email_hint">abc@xyz.com</string>
    <string name="dot_dot_dot_dot">•••••••••</string>
    <string name="enter">Enter</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="log_in">Log In</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_username">Create Username</string>
    <string name="verify_password">Verify Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="eg_sebastian_stan">Sebastian Stan</string>
    <string name="abc_xyz_com">abc@xyz.com</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="change_password">Change password</string>
    <string name="cancel2">Cancel</string>
    <string name="notifications">Notifications</string>
    <string name="alerts">Alerts</string>
    <string name="notification_channel_description">Used for lecture notifications</string>
    <string name="history">History</string>
    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string name="timeStamp"> %1\$s | %2\$s</string>
    <string name="missed_class">Missed %1\$s </string>
    <string name="attended_class">Attended %1\$s </string>
    <string name="deleted_subject">Deleted subject %1\$s. Attended: %2\$s, Missed: %3\$s, Requirement: %4\$s</string>
    <string name="added_subject">Created subject %1\$s. Attended: %2\$s, Missed: %3\$s, Requirement: %4\$s</string>
    <string name="added_lecture">Created lecture %1\$s (%2\$s, %3\$s to %3\$s)</string>
    <string name="deleted_lecture"> Deleted lecture %1\$s (%2\$s, %3\$s to %3\$s) </string>
    <string name="alerts_on">Alerts turned ON </string>
    <string name="alerts_off">Alerts turned OFF </string>
    <string name="back">Back</string>
    <string name="hold_any_subject_lecture_and_drag_to_change_its_position_in_the_list">Hold any subject/lecture and drag to change its position in the list</string>
    <string name="hold_and_drag">Hold and Drag</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="guest">Guest</string>
    <string name="error_loading_image_message">Couldn\'t load image</string>
    <string name="user_not_logged_in_message">Couldn\'t find logged in user</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="upcoming_classes">Upcoming classes</string>
    <string name="account_">Account</string>
</resources>