<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16sp"
    android:paddingEnd="16sp"
    android:gravity="center"
    android:background="@color/black"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SignupFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="end"
                android:layout_height="wrap_content">
                <include layout="@layout/skip_button"
                    android:layout_height="wrap_content"
                    android:id="@+id/skip_btn"
                    android:layout_width="wrap_content"/>
            </LinearLayout>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:fontFamily="sans-serif-black"
                android:textSize="40sp"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginStart="4sp"
                android:layout_marginTop="24sp"
                android:text="@string/create_username"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="8sp"
                android:layout_width="match_parent"
                android:textColorHint="@color/white"
                app:boxStrokeWidth="1dp"
                app:boxCornerRadiusTopEnd="12sp"
                app:boxCornerRadiusTopStart="12sp"
                app:boxCornerRadiusBottomStart="12sp"
                app:boxCornerRadiusBottomEnd="12sp"
                android:elevation="32dp"
                android:id="@+id/username_text_input"
                app:boxBackgroundColor="@color/card_bg"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    app:boxCornerRadiusBottomEnd="12dp"
                    app:boxCornerRadiusTopStart="12dp"
                    android:id="@+id/username_text_edit"
                    android:textColor="@color/white"
                    android:hint="@string/eg_sebastian_stan"
                    android:textColorHint="@color/text_primary"
                    android:inputType="text"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    app:boxCornerRadiusBottomStart="12dp"
                    app:boxCornerRadiusTopEnd="12dp"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginStart="4sp"
                android:layout_marginTop="24sp"
                android:text="@string/email"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="8sp"
                android:layout_width="match_parent"
                android:textColorHint="@color/white"
                app:boxStrokeWidth="1dp"
                app:boxCornerRadiusTopEnd="12sp"
                app:boxCornerRadiusTopStart="12sp"
                app:boxCornerRadiusBottomStart="12sp"
                app:boxCornerRadiusBottomEnd="12sp"
                android:elevation="32dp"
                android:id="@+id/email_text_input"
                app:boxBackgroundColor="@color/card_bg"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    app:boxCornerRadiusBottomEnd="12dp"
                    app:boxCornerRadiusTopStart="12dp"
                    android:id="@+id/email_text_edit"
                    android:textColor="@color/white"
                    android:hint="@string/email_hint"
                    android:inputType="text"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    app:boxCornerRadiusBottomStart="12dp"
                    app:boxCornerRadiusTopEnd="12dp"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginStart="4sp"
                android:layout_marginTop="24sp"
                android:text="@string/password"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="8sp"
                android:layout_width="match_parent"
                android:textColorHint="@color/white"
                app:boxStrokeWidth="1dp"
                app:boxCornerRadiusTopEnd="12sp"
                app:boxCornerRadiusTopStart="12sp"
                app:boxCornerRadiusBottomStart="12sp"
                app:boxCornerRadiusBottomEnd="12sp"
                android:elevation="32dp"
                android:id="@+id/password_text_input"
                app:boxBackgroundColor="@color/card_bg"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    app:boxCornerRadiusBottomEnd="12dp"
                    app:boxCornerRadiusTopStart="12dp"
                    android:id="@+id/password_text_edit"
                    android:textColor="@color/white"
                    android:hint="@string/dot_dot_dot_dot"
                    android:inputType="text"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    app:boxCornerRadiusBottomStart="12dp"
                    app:boxCornerRadiusTopEnd="12dp"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginStart="4sp"
                android:layout_marginTop="24sp"
                android:text="@string/verify_password"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="8sp"
                android:layout_width="match_parent"
                android:textColorHint="@color/white"
                app:boxStrokeWidth="1dp"
                app:boxCornerRadiusTopEnd="12sp"
                app:boxCornerRadiusTopStart="12sp"
                app:boxCornerRadiusBottomStart="12sp"
                app:boxCornerRadiusBottomEnd="12sp"
                android:elevation="32dp"
                android:id="@+id/v_password_text_input"
                app:boxBackgroundColor="@color/card_bg"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    app:boxCornerRadiusBottomEnd="12dp"
                    app:boxCornerRadiusTopStart="12dp"
                    android:id="@+id/v_password_text_edit"
                    android:textColor="@color/white"
                    android:hint="@string/dot_dot_dot_dot"
                    android:inputType="text"
                    android:maxLines="1"
                    android:imeOptions="actionDone"
                    app:boxCornerRadiusBottomStart="12dp"
                    app:boxCornerRadiusTopEnd="12dp"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                app:strokeWidth="0dp"
                android:id="@+id/enter_btn"
                android:layout_marginTop="32sp"
                app:cardCornerRadius="12sp"
                android:layout_height="50sp">
                <LinearLayout
                    android:background="@drawable/drawer_head_bg"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_height="50sp">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/enter"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="@color/white"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginTop="20sp"
                android:textAlignment="center"
                android:textSize="16sp"
                android:text="@string/already_registered"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="16sp"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/log_in_tv"
                android:text="@string/log_in"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>