<LinearLayout android:layout_width="300dp"
    android:layout_height="match_parent"
    android:id="@+id/drawer"
    style="@style/ScreenBackground"
    android:layout_gravity="start"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:background="@drawable/drawer_head_bg"
        android:layout_height="wrap_content">
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="120sp"
            android:src="@drawable/noprofile"
            android:scaleType="centerCrop"
            android:layout_marginStart="12sp"
            android:id="@+id/userImageIv"
            android:layout_marginTop="20dp"
            android:elevation="32dp"
            app:shapeAppearanceOverlay="@style/circularImageView"
            android:layout_height="120dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/usernameTv"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emailTv"
            android:layout_marginStart="24dp"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_marginTop="2dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingStart="12dp"
        android:gravity="center_vertical"
        android:id="@+id/ll_for_history"
        android:layout_height="wrap_content">
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="32dp"
            android:src="@drawable/ic_privacy"
            android:layout_height="32dp"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="14sp"
            android:text="@string/history"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/text_primary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingStart="12dp"
        android:gravity="center_vertical"
        android:id="@+id/ll_for_privacy"
        android:layout_height="wrap_content">
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="32dp"
            android:src="@drawable/ic_privacy"
            android:layout_height="32dp"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="14sp"
            android:text="@string/privacy_policy"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/text_primary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingStart="12dp"
        android:gravity="center_vertical"
        android:id="@+id/ll_for_about"
        android:layout_height="wrap_content">
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="32dp"
            android:src="@drawable/ic_about"
            android:layout_height="32dp"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="14sp"
            android:text="@string/about"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/text_primary"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingTop="8sp"
        android:paddingBottom="8dp"
        android:paddingStart="12dp"
        android:gravity="center_vertical"
        android:id="@+id/ll_for_logout"
        android:layout_height="wrap_content">
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="32dp"
            android:src="@drawable/ic_logout"
            android:id="@+id/auth_icon"
            android:layout_height="32dp"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="14sp"
            android:id="@+id/auth_tv"
            android:text="@string/logout"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/text_primary"/>

    <Space
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:layout_weight="1"/>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:layout_width="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/alerts"
        android:textStyle="bold"
        android:id="@+id/notification_switch"
        android:layout_marginBottom="8dp"
        android:layout_height="wrap_content"/>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:layout_width="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/dark_theme"
        android:textStyle="bold"
        android:id="@+id/theme_switch"
        android:layout_marginBottom="16dp"
        android:layout_height="wrap_content"/>

</LinearLayout>