<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    app:cardCornerRadius="30sp"
    android:elevation="32dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subject_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"
        android:id="@+id/subjectNameTv"
        android:textStyle="bold"
        android:layout_marginTop="32sp"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subjectNameTv"
        android:layout_marginTop="12sp"
        android:layout_marginStart="16sp"
        android:layout_marginEnd="16sp"
        android:hint="Ex: Mathematics"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="28sp"
        android:id="@+id/subjectNameEdTxt"
        android:maxLines="1"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/incDecReqLL"
        android:layout_marginTop="16sp"
        app:layout_constraintTop_toBottomOf="@id/subjectNameEdTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:id="@+id/attendedInfoLL"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginStart="16sp"
            android:layout_height="wrap_content">
            <include layout="@layout/increase_button"
                android:layout_width="wrap_content"
                android:id="@+id/incAttendenceButton"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp"
                android:textAlignment="center"
                android:id="@+id/attendedNoOfClassesTv"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="4sp"
                android:text="@string/attended"/>

            <include layout="@layout/decrease_button"
                android:layout_width="wrap_content"
                android:id="@+id/decAttendenceButton"
                android:layout_marginTop="8sp"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:id="@+id/missedInfoLL"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginStart="16sp"
            android:layout_marginEnd="16sp"
            android:layout_height="wrap_content">
            <include layout="@layout/increase_button"
                android:layout_width="wrap_content"
                android:id="@+id/incMissedButton"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp"
                android:textAlignment="center"
                android:id="@+id/missedNoOfClassesTv"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="4sp"
                android:text="@string/missed"/>

            <include layout="@layout/decrease_button"
                android:layout_width="wrap_content"
                android:id="@+id/decMissedButton"
                android:layout_marginTop="8sp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:id="@+id/requirementInfoLL"
            android:gravity="center"
            android:layout_marginStart="16sp"
            android:layout_marginEnd="16sp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <include layout="@layout/increase_button"
                android:layout_width="wrap_content"
                android:id="@+id/incRequirementButton"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp"
                android:textAlignment="center"
                android:id="@+id/requirementTv"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="4sp"
                android:text="@string/requirement"/>

            <include layout="@layout/decrease_button"
                android:layout_width="wrap_content"
                android:id="@+id/decRequirementButton"
                android:layout_marginTop="8sp"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/incDecReqLL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            android:text="@string/cancel"
            android:layout_marginStart="16sp"
            android:layout_marginEnd="16sp"
            android:layout_weight="1"
            android:id="@+id/cancelBtn"
            android:backgroundTint="@color/red"
            app:cornerRadius="12sp"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            android:text="@string/add"
            android:layout_weight="1"
            android:id="@+id/addSubjectBtn"
            android:layout_marginStart="16sp"
            android:layout_marginEnd="16sp"
            android:backgroundTint="@color/blue"
            app:cornerRadius="12sp"/>

    </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
